<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/filter_raz"
                android:title="@string/item_raz"
                app:showAsAction="never" />

            <item
                android:id="@+id/filter_by_date"
                android:title="@string/item_filter_by_date"
                app:showAsAction="never">

                <menu>

                    <item
                        android:id="@+id/filter_before_date"
                        android:title="@string/item_filter_before_date"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/filter_match_date"
                        android:title="@string/item_filter_match_date"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/filter_after_date"
                        android:title="@string/item_filter_after_date"
                        app:showAsAction="never" />

                </menu>

            </item>

        </menu>

    </item>


</menu>